--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -88,6 +88,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Jeu<span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('loi') }}">Lois</a></li>
+						<li><a href="{{ path('technologie') }}">Technologies</a></li>
 						<li><a href="{{ path('econnomie') }}">Economie</a></li>
 						<li><a href="{{ path('strategie') }}">Stratégie</a></li>
 						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
