--- a/src/LarpManager/Views/admin/objet/print.twig
+++ b/src/LarpManager/Views/admin/objet/print.twig
@@ -75,7 +75,7 @@ table td {
 								<span class="pull-right"><bold>{{ item.quality.numero }}{{ item.identification }}</bold></span>
 							</div>
 							<div class="item-text">
-								{{ item.objet.nom }}
+								{{ item.label }}
 							</div>
 						
 					</td>
