--- a/src/LarpManager/Views/admin/econnomie/index.twig
+++ b/src/LarpManager/Views/admin/econnomie/index.twig
@@ -9,6 +9,24 @@
 		<li class="active">Economie</li>
 	</ol>
 	
+	<nav class="navbar navbar-default" style="padding-right: 5px;">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+			</button>
+			<span class="navbar-brand">
+			</span>
+		</div>
+		<div id="bs-example-navbar-collapse-2" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<a href="{{ path('economie.csv') }}" class="btn btn-primary navbar-btn">Fichier CSV</a>
+			</ul>
+		</div>
+	</nav>
+	
 	<div class="well well-sm">
 		<div class="alert alert-info">
 			Ces informations correspondent aux groupes participant au prochain jeu <strong>{{ gn.label }}</strong>.
