--- a/src/LarpManager/Views/admin/territoire/delete.twig
+++ b/src/LarpManager/Views/admin/territoire/delete.twig
@@ -6,7 +6,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
 				<div class="well bs-component">
-					<form action="{{ path('territoire.admin.add') }}" method="POST" {{ form_enctype(form) }}>
+					<form action="{{ path('territoire.admin.delete', {'territoire': territoire.id}) }}" method="POST" {{ form_enctype(form) }}>
 						<fieldset>
 							<legend>Supression d'un territoire</legend>
 							{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
