--- a/src/LarpManager/Views/public/personnage/trombine.twig
+++ b/src/LarpManager/Views/public/personnage/trombine.twig
@@ -17,7 +17,7 @@
 								
 		<div class="header"><h5>Votre trombine</h5></div>
 
-		{% if app.user.trombineUrl %}		
+		{% if personnage.trombineUrl %}		
 			<img src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
 		{% else %}
 			<img src="{{ app.request.basepath }}/img/no_trombine.png" />
