--- a/src/LarpManager/Views/homepage/index.twig
+++ b/src/LarpManager/Views/homepage/index.twig
@@ -35,7 +35,7 @@
 					</div>
 					<div class="panel-body">
 						<p>Vous ne participez à aucun jeu. Nous vous proposons de parcourir la liste des jeux proposés par Eve-Oniris et d'en selectionner un.</p>
-						<p><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<a href="{{ path('user.gn.list') }}">Voir la liste des jeux</a>.</p>
+						<p><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<a href="{{ path('gn.list') }}">Voir la liste des jeux</a>.</p>
 					</div>
 				</div>
 			{% else %}
