--- a/src/LarpManager/Views/homepage/fragment/participants.twig
+++ b/src/LarpManager/Views/homepage/fragment/participants.twig
@@ -5,7 +5,7 @@
 <ul class="list-group">
 	{% for participant in participants %}
 		<li class="list-group-item">
-    		<a href="{{ path('participant.index', {'participant': participant.id}) }}">
+    		<a href="{{ path('gn.detail', {'gn': participant.gn.id}) }}">
     			{{ participant.gn.label }}
     		</a>
 			&nbsp;//&nbsp;
@@ -21,5 +21,5 @@
     		
     	</li>   				
 	{% endfor %}
-	<li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<a href="{{ path('user.gn.list') }}">Liste des jeux</a></li>
+	<li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<a href="{{ path('gn.list') }}">Liste des jeux</a></li>
 </ul>
