--- a/src/LarpManager/Views/gn/billet.twig
+++ b/src/LarpManager/Views/gn/billet.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Gn{% endblock title %}
+{% block title %}Gn -- {{ gn.label }}{% endblock title %}
 
 {% block content %}
 	<div class="well well-sm clearfix">
