--- a/src/LarpManager/Views/gn/renom.twig
+++ b/src/LarpManager/Views/gn/renom.twig
@@ -83,7 +83,9 @@ li.pin:hover {
 {% block content %}
 
 	<ol class="breadcrumb">
-		<li><a href="{{ path('homepage') }}">Page d'accueil</a></li>
+		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
+		<li><a href="{{path('gn.list') }}">Liste des GNs</a></li>
+		<li><a href="{{path('gn.detail', {'gn': gn.id}) }}">{{ gn.label }}</a></li>
 		<li class="active">Les personnages renommés</li>
 	</ol>
 
