--- a/src/LarpManager/Views/public/rule/detail.twig
+++ b/src/LarpManager/Views/public/rule/detail.twig
@@ -6,7 +6,7 @@
 
 <ol class="breadcrumb">
 	<li><a href="{{ path('homepage')  }}">Accueil</a></li>
-	<li><a href="{{ path('participant.index', {'participant' : participant.id}) }}">{{ participant.gn.label }}</a></li>
+	<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
 	<li><a href="{{ path('participant.regle.list', {'participant' : participant.id}) }}">Liste des règles</a></li>
 	<li class="active">{{ regle.label }}</li>
 </ol>
