--- a/src/LarpManager/Views/public/sort/detail.twig
+++ b/src/LarpManager/Views/public/sort/detail.twig
@@ -24,7 +24,7 @@
 	<object type="application/pdf" width="100%" height="1200px" >
 		<param name="src" value="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id}) }}" />
 	 
-		<p>It appears your Web browser is not configured to display PDF files. No worries, just {{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id}) }}">click here to download the PDF file.</a></p>
+		<p>It appears your Web browser is not configured to display PDF files. No worries, just <a href="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id}) }}">click here to download the PDF file.</a></p>
 	</object>
 
 </div>
