Modification des formulaires pour les intrigues (état)

--- a/src/LarpManager/Views/admin/intrigue/update.twig
+++ b/src/LarpManager/Views/admin/intrigue/update.twig
@@ -24,6 +24,7 @@
 					{{ form_row(form.description) }}
 					{{ form_row(form.text) }}
 					{{ form_row(form.resolution) }}
+					{{ form_row(form.state) }}
 					</div>
 					<div class="col-md-4">
 						<h4>{{ form_label(form.intrigueHasGroupes) }}</h4>
