Affichage du BG au joueur sur le detail du GN (page de garde joueur)

--- a/src/LarpManager/Views/gn/detail.twig
+++ b/src/LarpManager/Views/gn/detail.twig
@@ -262,6 +262,11 @@
 	 					<li>Vous n'avez pas de personne secondaire, choisissez-en !</li>
 					{% endif %}
 						<li><a href="{{ path('participant.personnageSecondaire', {'participant': participant.id}) }}"><i class="fa fa-pencil" aria-hidden="true"></i> Modifier votre personnage secondaire</a></li>
+					{% if participant.background %}
+						<li><a href="{{ path('participant.background', {'participant': participant.id}) }}"><i class="fa fa-book" aria-hidden="true"></i>Votre background</a></li>
+					{% else %}
+						<li>vous n'avez pas de background.</li>
+					{% endif %}
 					</ul>
 				</div>
 			</div>
