--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -1,7 +1,5 @@
 {% extends "layout.twig" %}
 
-
-
 {% block content %}
 
 	<ol class="breadcrumb">
@@ -79,7 +77,7 @@
 		
 			<div class="list-group">
 				{% for postulant in groupeSecondaire.postulants %}
-					{% if postulant.personnage.participeToByLabel('LH3') %}
+					{% if postulant.personnage.participeTo(gn) %}
 						<div class="list-group-item">
 							<h6 class="list-group-item-heading">
 								<a href="{{ path('personnage.admin.detail', {'personnage':postulant.personnage.id}) }}">{{ postulant.personnage.nom }}&nbsp;{{ postulant.personnage.surnom }}</a>
@@ -98,15 +96,16 @@
 	</div>
 	
 	<div class="panel panel-default">
-		<div class="panel-heading">Liste des membres</div>
-		<div class="panel-body">
+		<div class="panel-heading">Liste des membres ({{groupeSecondaire.membres|length}})</div>
+		
+		<div class="panel-body">					
 			<a href="{{ path('groupeSecondaire.admin.newMembre', {'groupeSecondaire': groupeSecondaire.id}) }}">Ajouter un membre</a>
 			<div class="list-group">
 				{% for membre in groupeSecondaire.membres %}
-					{% if membre.personnage.participeToByLabel('LH3') %}
+					{% if membre.personnage.participeTo(gn) %}
 						<div class="list-group-item">
 							<div class="list-group-item-heading">
-								<h6 class="list-group-item-heading"><a href="{{ path('personnage.admin.detail', {'personnage': membre.personnage.id}) }}">{{ membre.personnage.identityByLabel('LH3') }}</a></h6>
+								<h6 class="list-group-item-heading"><a href="{{ path('personnage.admin.detail', {'personnage': membre.personnage.id}) }}">{{ membre.personnage.identityByLabel(gn.getLabel()) }}</a></h6>
 							</div>
 							<div class="list-group-item-text">
 								{% if membre.secret %}
@@ -138,7 +137,7 @@
 		<div class="panel-body">
 			<div class="list-group">
 				{% for membre in groupeSecondaire.membres %}
-					{% if membre.personnage.participeToByLabel('LH3') %}
+					{% if membre.personnage.participeTo(gn) %}
 						{{ membre.personnage.user.email }},&nbsp;
 					{% endif %}
 				{% endfor %}
